...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_label"
                android:layout_gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/ingredients_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:background="@color/primary_light"/>

...
            android:textStyle="bold"
            android:layout_below="@id/ingredients_linear_layout"
            android:gravity="center_horizontal"
            android:text="@string/how_to_make_label"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_step_recycler_view"
            android:layout_below="@id/how_to_make_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

...
