<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/primary_light"
    android:keepScreenOn="true"
    tools:context="com.wahyudieko.bakingapp.ui.StepFragment">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exo_player_view"
        android:layout_width="match_parent"
        android:focusable="true"
        app:resize_mode="fill"
        android:layout_height="0dp"
        android:layout_weight="4">
    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

    <ImageView
        android:id="@+id/step_thumbnail_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:layout_weight="4"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/step_description_tv"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:textColor="@android:color/tertiary_text_light"
        android:layout_height="0dp"
        android:layout_weight="6"/>


</LinearLayout>